Set header fixed, aligned project images
Changed project images so they're aligned right
Changed top of the header (name and contact) so they're fixed at top of
page if page size allows

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -119,6 +119,7 @@ a {
   background-color: #484848;
 }
 
+
 .flex-box {
   display: -webkit-flex;
   display: flex;
@@ -126,13 +127,19 @@ a {
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 10px;
+  margin-left:5%;
+  margin-right:5%;
+}
+
+.flex-box.space-between{
+  justify-content:space-between;
 }
 
 .center-content {
-  padding-top: 2.5%;
+  padding-top: 20px;
   padding-left: 5%;
   padding-right: 5%;
-  padding-bottom: 2.5%
+  padding-bottom: 0px;
 }
 
 ul {
@@ -173,6 +180,19 @@ span {
 @media only screen and (max-width: 1024px) {
   #letsConnect {
     margin-top: 5%;
+  }
+}
+
+@media only screen and (min-height: 600px) {
+  #primary-header{
+    position: fixed;
+    width:100%;
+    background-color: #484848;
+    height:100px;
+  }
+  #secondary-header{
+    padding-top: 100px;
+    background-color: #484848;
   }
 }
 
